--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,7 @@
 {
   "hello": "Hello, {name}!",
   "language": "Language",
-  "welcome": "Welcome"
+  "welcome": "Welcome",
+  "pages.title.top": "Index ENG",
+  "layouts.title": "Cool Website {title}"
 }
